Questions are set dynamically and their answers as well. values are random strings, and the correct string is saved in the component

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -41,3 +41,9 @@ body {
   align-items: center;
   padding: 1rem;
 }
+
+.quest-case {
+  border: solid 3px darkblue;
+  border-radius: 10px;
+  width: 100%;
+}
