--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   padding: 0;
 }
+
+input[type="radio"] {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
 .toggle-password {
   cursor: pointer;
 }
@@ -33,6 +39,45 @@ body {
   align-items: center;
 }
 
+/* -- Generics -- */
+.gen-card {
+  width: 100%;
+  /* user-select: none; */
+  color: ghostwhite;
+  margin: 1rem auto;
+  padding: 1rem;
+  border 1px solid #ffffff22;
+  background-color: #282c34;
+  background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17, 0, 32, .5) 100%);
+  box-shadow: 0 7px 20px 5px #00000088;
+  border-radius: 0.7rem;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  overflow: hidden;
+  transition: .5s all;
+  ::before {
+    position: fixed;
+    content: "";
+    box-shadow:: 0 0 100px 40px #ffffff08;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: .7s all;
+  }
+  &:hover {
+    border: 1px solid #ffffff44;
+    box-shadow: 0 7px 50px 10px #000000aa;
+    transform: scale(1.015);
+    filter: brightness(1.3);
+    ::before {
+      filter: brightness(0.5);
+      top: -100%;
+      left: 200%;
+    }
+  }
+}
+
 .make-quiz-form {
   border: solid 2px blue;
   display: flex;
@@ -42,6 +87,7 @@ body {
   padding: 1rem;
 }
 
+/* -- Questions -- */
 .quest-case {
   border: solid 3px darkblue;
   border-radius: 10px;
