--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,14 +1,17 @@
 body {
   background-color: grey;
   height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 1rem;
+  display: flex;
 }
             
 .fill-screen {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
   header {
     flex-shrink: 0;
   }
@@ -16,7 +19,7 @@ body {
     flex-shrink: 0;
   }
   main {
-    flex: 1 0 auto;
+    flex-grow: 1;
   }
 }
 
@@ -30,6 +33,40 @@ button, input[type="submit"]{
   padding: 0.3rem 1rem;
   cursor: pointer;
 }
+
+
+/* ----- For Footer ----- */
+footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  a {
+    padding: 0.5rem 1rem;
+    color: ghostwhite;
+    background-color: #4c2d95;
+    text-decoration: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+  }
+  a:hover {
+    background-color: #854cd8;
+  }
+  .footer-links {
+    width:100%;
+    max-width: 40rem;
+    display: flex;
+    /* gap: 1rem; */
+    margin: 1rem 0;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between;
+  }
+}
+/* ----- ---------- ----- */
 
 /* -- For Unimplemented Buttons -- */
 .unimplemented-feature {
