--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -23,7 +23,7 @@ body {
   }
 }
 
-input[type="radio"] {
+input[type="checkbox"], input[type="radio"] {
   width: 1.25rem;
   height: 1.25rem;
 }
@@ -33,6 +33,51 @@ button, input[type="submit"]{
   padding: 0.3rem 1rem;
   cursor: pointer;
 }
+
+
+/* -- Signin / Login -- */
+.form-card-container {
+  border: red dotted 2px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  section.form-card {
+    width:100%;
+    max-width: 40rem;
+    /* border: red dashed 2px; */
+    padding: 1rem;
+    width: 100%;
+    /* user-select: none; */
+    color: ghostwhite;
+    border 1px solid #ffffff22;
+    background-color: #282c34;
+    background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17, 0, 32, .5) 100%);
+    box-shadow: 0 7px 20px 5px #00000088;
+    border-radius: 0.7rem;
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    overflow: hidden;
+    form {
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+    a:link {
+      color: #dAdAfA;
+    }
+    a:visited {
+      color: #eA3AAA;
+    }
+  }
+}
+.form-card-container input[type="text"], .form-card-container input[type="password"] {
+  width: 60%;
+  padding: 0.2rem;
+  margin: 0.5rem;
+}
+/* -- -------------- -- */
 
 
 /* ----- For Footer ----- */
