fixed bug and now quizzes are added to the homescreen automatically when created

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -64,7 +64,7 @@ button, input[type="submit"]{
       align-items: flex-start;
     }
     a:link {
-      color: #dAdAfA;
+      color: #5AdAfA;
     }
     a:visited {
       color: #eA3AAA;
